--- a/public/css/custom/main.css
+++ b/public/css/custom/main.css
@@ -36,7 +36,8 @@ body {
 
 
 .search input[type=text] {
-    width: 130px;
+    width: 222px;
+    height: 40px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
